--- a/数组/832. 翻转图像.md
+++ b/数组/832. 翻转图像.md
@@ -1,1 +1,85 @@
 # Q：翻转图像
+---
+## eg:
+---
+```
+给定一个二进制矩阵 A，我们想先水平翻转图像，然后反转图像并返回结果。
+
+水平翻转图片就是将图片的每一行都进行翻转，即逆序。例如，水平翻转 [1, 1, 0] 的结果是 [0, 1, 1]。
+
+反转图片的意思是图片中的 0 全部被 1 替换， 1 全部被 0 替换。例如，反转 [0, 1, 1] 的结果是 [1, 0, 0]。
+
+示例 1:
+
+输入: [[1,1,0],[1,0,1],[0,0,0]]
+输出: [[1,0,0],[0,1,0],[1,1,1]]
+解释: 首先翻转每一行: [[0,1,1],[1,0,1],[0,0,0]]；
+     然后反转图片: [[1,0,0],[0,1,0],[1,1,1]]
+示例 2:
+
+输入: [[1,1,0,0],[1,0,0,1],[0,1,1,1],[1,0,1,0]]
+输出: [[1,1,0,0],[0,1,1,0],[0,0,0,1],[1,0,1,0]]
+解释: 首先翻转每一行: [[0,0,1,1],[1,0,0,1],[1,1,1,0],[0,1,0,1]]；
+     然后反转图片: [[1,1,0,0],[0,1,1,0],[0,0,0,1],[1,0,1,0]]
+
+```
+
+## 笨办法
+#### <font color='red'>此方法效率极低</font >
+```
+class Solution {
+    public int[][] flipAndInvertImage(int[][] A) {
+        for(int i = 0;i< A.length;i++){
+            for(int k = 0; k<A[i].length/2;k++){
+                int temp = A[i][k];
+                A[i][k] = A[i][A[i].length-k-1];
+                A[i][A[i].length-k-1]=temp ; 
+                // A[i][k] = A[i][A[i].length-k-1] == 0 ? 1:0;
+                // A[i][A[i].length-k-1]=temp == 0 ? 1:0; 
+            }
+        }
+         for(int i = 0;i< A.length;i++){
+            for(int k = 0; k<A[i].length;k++){
+                if(A[i][k]==0){
+                    A[i][k]=1;
+                } else{
+                    A[i][k]=0;
+                }
+            }
+        }
+
+        System.out.println(A);
+        return A;
+    }
+    
+}
+```
+
+## 改进
+---
+```
+class Solution {
+    public int[][] flipAndInvertImage(int[][] A) {
+        for(int i = 0;i< A.length;i++){
+            if(A[i].length==1){
+                A[0][0] = A[0][0] == 0 ? 1 : 0;
+                return A;
+            }
+            for(int k = 0; k<A[i].length/2;k++){
+                int temp = A[i][k];
+                A[i][k] = A[i][A[i].length-k-1] == 0 ? 1:0;
+                A[i][A[i].length-k-1] = temp == 0 ? 1:0; 
+            }
+            if(A[i].length % 2 == 1){
+                   A[i][A[i].length/2] = (A[i][A[i].length/2] == 0 ? 1:0);
+            }
+        }
+        return A;
+    }
+    
+}
+```
+## 知识点
+---
+[java运算符 与（&）、非（~）、或（|）、异或（^）](https://www.cnblogs.com/yesiamhere/p/6675067.html)【0,1可以通过异或去变换】
+
