--- a/数组/35. 搜索插入位置.md
+++ b/数组/35. 搜索插入位置.md
@@ -4,65 +4,53 @@
 ## eg
 ---
 ```
-给定一个数组 nums 和一个值 val，你需要原地移除所有数值等于 val 的元素，返回移除后数组的新长度。
+给定一个排序数组和一个目标值，在数组中找到目标值，并返回其索引。如果目标值不存在于数组中，返回它将会被按顺序插入的位置。
 
-不要使用额外的数组空间，你必须在原地修改输入数组并在使用 O(1) 额外空间的条件下完成。
-
-元素的顺序可以改变。你不需要考虑数组中超出新长度后面的元素。
+你可以假设数组中无重复元素。
 
 示例 1:
 
-给定 nums = [3,2,2,3], val = 3,
-
-函数应该返回新的长度 2, 并且 nums 中的前两个元素均为 2。
-
-你不需要考虑数组中超出新长度后面的元素。
+输入: [1,3,5,6], 5
+输出: 2
 示例 2:
 
-给定 nums = [0,1,2,2,3,0,4,2], val = 2,
+输入: [1,3,5,6], 2
+输出: 1
+示例 3:
 
-函数应该返回新的长度 5, 并且 nums 中的前五个元素为 0, 1, 3, 0, 4。
+输入: [1,3,5,6], 7
+输出: 4
+示例 4:
 
-注意这五个元素可为任意顺序。
-
-你不需要考虑数组中超出新长度后面的元素。
+输入: [1,3,5,6], 0
+输出: 0
 
 ```
 ## 解决方法
 
 ```
+顺序查找：
 class Solution {
-    public int removeElement(int[] nums, int val) {
-        int j =0;
-        for(int i = 0;i<nums.length;i++){
-            if(nums[i] != val){
-                nums[j]=nums[i];
-                j++;
+    public int searchInsert(int[] nums, int target) {
+        int i;
+        for(i=0;i<nums.length;i++){
+            if(nums[i]==target){
+                return i;
+            }else if(nums[i]>target){
+                return i;
+            }else{
             }
         }
-        return j;
+        return i;
     }
 }
 ```
 ### 改进
 
-R：空间消耗方面较多
-
 ---
 * 方式一
-[双指针思想]（内存稍有提升）
 ```
-class Solution {
-    public int removeElement(int[] nums, int val) {
-        int j = 0;
-       for(int i = 0;i<nums.length;i++){
-           if(nums[i]!=val){
-               nums[j] = nums[i];
-               j++;
-           }
-       }
-        return j;
-    }
-}
+二分查找：
+
 ```
 
