--- a/数组/hot100.md
+++ b/数组/hot100.md
@@ -5,18 +5,224 @@
 ### 1. 两数之和
 ```
 给定一个整数数组 nums 和一个目标值 target，请你在该数组中找出和为目标值的那 两个 整数，并返回他们的数组下标。
-
 你可以假设每种输入只会对应一个答案。但是，你不能重复利用这个数组中同样的元素。
 
 示例:
-
 给定 nums = [2, 7, 11, 15], target = 9
-
 因为 nums[0] + nums[1] = 2 + 7 = 9
 所以返回 [0, 1]
-
-来源：力扣（LeetCode）
-链接：https://leetcode-cn.com/problems/two-sum
-著作权归领扣网络所有。商业转载请联系官方授权，非商业转载请注明出处。
 ```
 - O:
+```
+	public int[] twoSum(int[] nums, int target) {
+        HashMap<Integer, Integer> map = new HashMap<>();
+        map.put(nums[0], 0);
+        int[] result = new int[2];
+        for (int i = 1; i < nums.length; i++) {
+            if (map.containsKey(target - nums[i])) {
+                result[0] = map.get(target - nums[i]);
+                result[1] = i;
+            } else {
+                map.put(nums[i], i);
+            }
+        }
+        return result;
+    }
+```
+--- 
+### 2. 两数相加
+```
+给出两个 非空 的链表用来表示两个非负的整数。其中，它们各自的位数是按照 逆序 的方式存储的，并且它们的每个节点只能存储 一位 数字。
+
+如果，我们将这两个数相加起来，则会返回一个新的链表来表示它们的和。
+
+您可以假设除了数字 0 之外，这两个数都不会以 0 开头。
+
+示例：
+
+输入：(2 -> 4 -> 3) + (5 -> 6 -> 4)
+输出：7 -> 0 -> 8
+原因：342 + 465 = 807
+```
+- O:
+```
+public ListNode addTwoNumbers(ListNode l1, ListNode l2) {
+        ListNode node = new ListNode(-1);
+        ListNode result = node;
+        int carry = 0;
+        while (l1 != null || l2 != null) {
+            int x = (l1 != null) ? l1.val : 0;
+            int y = (l2 != null) ? l2.val : 0;
+            int temp = x + y + carry;
+            carry = temp / 10;
+            node.next = new ListNode(temp % 10);
+            node = node.next;
+            if (l1 != null) {
+                l1 = l1.next;
+            }
+            if (l2 != null) {
+                l2 = l2.next;
+            }
+        }
+        if (carry > 0) {
+            node.next = new ListNode(carry);
+        }
+        return result.next;
+    }
+```
+---
+### 3. 无重复字符的最长子串  (滑动窗口) 
+```
+给定一个字符串，请你找出其中不含有重复字符的 最长子串 的长度。
+
+示例 1:
+
+输入: "abcabcbb"
+输出: 3 
+解释: 因为无重复字符的最长子串是 "abc"，所以其长度为 3。
+示例 2:
+
+输入: "bbbbb"
+输出: 1
+解释: 因为无重复字符的最长子串是 "b"，所以其长度为 1。
+示例 3:
+
+输入: "pwwkew"
+输出: 3
+解释: 因为无重复字符的最长子串是 "wke"，所以其长度为 3。
+     请注意，你的答案必须是 子串 的长度，"pwke" 是一个子序列，不是子串。
+
+```
+- O:
+```
+	public int lengthOfLongestSubstring(String s) {
+         int length = s.length();
+        Set<Character> set = new HashSet<>();
+        int ans = 0, j = 0, i = 0;
+        while (i < length && j < length) {
+            if (!set.contains(s.charAt(j))) {
+                set.add(s.charAt(j));
+                j++;
+                ans = Math.max(ans, j - i);
+            } else {
+                set.remove(s.charAt(i++));
+            }
+        }
+        return ans;
+    }
+```
+---
+### <font color ="red">4. 寻找两个有序数组的中位数</font>
+```
+给定两个大小为 m 和 n 的有序数组 nums1 和 nums2。
+
+请你找出这两个有序数组的中位数，并且要求算法的时间复杂度为 O(log(m + n))。
+
+你可以假设 nums1 和 nums2 不会同时为空。
+
+示例 1:
+
+nums1 = [1, 3]
+nums2 = [2]
+
+则中位数是 2.0
+示例 2:
+
+nums1 = [1, 2]
+nums2 = [3, 4]
+
+则中位数是 (2 + 3)/2 = 2.5
+```
+- O:
+```
+public static double findMedianSortedArrays(int[] nums1, int[] nums2) {
+        int[] arr = new int[nums1.length + nums2.length];
+        int i = 0;
+        for (i = 0; i < nums1.length; i++) {
+            arr[i] = nums1[i];
+        }
+        for (int j = i; j < nums1.length + nums2.length; j++) {
+            arr[j] = nums2[j - i];
+        }
+        Arrays.sort(arr);
+        int pos = arr.length / 2;
+        if (arr.length % 2 == 0) {
+            return (double) (arr[pos - 1] + arr[pos]) / 2;
+        } else {
+            return arr[pos];
+        }
+    }
+```
+### 5. 最长回文子串
+```
+给定一个字符串 s，找到 s 中最长的回文子串。你可以假设 s 的最大长度为 1000。
+
+示例 1：
+
+输入: "babad"
+输出: "bab"
+注意: "aba" 也是一个有效答案。
+示例 2：
+
+输入: "cbbd"
+输出: "bb"
+```
+- O:
+```
+
+```
+---
+### 21. 合并两个有序链表
+```
+将两个有序链表合并为一个新的有序链表并返回。新链表是通过拼接给定的两个链表的所有节点组成的。 
+
+示例：
+
+输入：1->2->4, 1->3->4
+输出：1->1->2->3->4->4
+```
+- O:
+```
+	public ListNode mergeTwoLists(ListNode l1, ListNode l2) {
+        ListNode pre = new ListNode(-1);
+        ListNode node = pre;
+        ListNode node1 = l1;
+        ListNode node2 = l2;
+        while (node1 != null && node2 != null) {
+            if (node1.val > node2.val) {
+                node.next = node2;
+                node2 = node2.next;
+                node = node.next;
+            } else {
+                node.next = node1;
+                node1 = node1.next;
+                node = node.next;
+            }
+        }
+        if (node1 != null) {
+            node.next = node1;
+        }
+        if (node2 != null) {
+            node.next = node2;
+        }
+        return pre.next;
+    }
+```
+- P1:递归
+```
+	public ListNode mergeTwoLists(ListNode l1, ListNode l2) {
+        if (l1 == null) {
+            return l2;
+        }
+        if (l2 == null) {
+            return l1;
+        }
+        if (l1.val >= l2.val) {
+            l2.next = mergeTwoLists(l1, l2.next);
+            return l2;
+        } else {
+            l1.next = mergeTwoLists(l1.next, l2);
+            return l1;
+        }
+    }
+```
