--- a/数组/hot100.md
+++ b/数组/hot100.md
@@ -226,3 +226,173 @@ public static double findMedianSortedArrays(int[] nums1, int[] nums2) {
         }
     }
 ```
+---
+### 11. 盛最多水的容器
+```
+给定 n 个非负整数 a1，a2，...，an，每个数代表坐标中的一个点 (i, ai) 。在坐标内画 n 条垂直线，垂直线 i 的两个端点分别为 (i, ai) 和 (i, 0)。找出其中的两条线，使得它们与 x 轴共同构成的容器可以容纳最多的水。
+
+说明：你不能倾斜容器，且 n 的值至少为 2。
+```
+- O:
+```
+public int maxArea(int[] height) {
+        int f = 0;
+        int l = height.length-1;
+        int maxArea = 0;
+        while(f<l){
+            maxArea = Math.max(maxArea,Math.min(height[f],height[l])*(l-f));
+            if(height[f]>height[l]){
+                l--;
+            }else{
+                f++;
+            }
+        }
+        return maxArea;
+    }
+```
+---
+### 19. 删除链表的倒数第N个节点
+```
+给定一个链表，删除链表的倒数第 n 个节点，并且返回链表的头结点。
+
+示例：
+
+给定一个链表: 1->2->3->4->5, 和 n = 2.
+
+当删除了倒数第二个节点后，链表变为 1->2->3->5.
+```
+- O
+```
+public ListNode removeNthFromEnd(ListNode head, int n) {
+        ListNode node = new ListNode(-1);
+        node.next = head;
+        ListNode pre = node;
+        // 先将head 后移n个单位
+        for(int i =0;i<n;i++){
+            if(head ==null){
+                return null;
+            }
+            head = head.next;
+        }
+		// 一起查找节点
+        while(head!=null){
+            head = head.next;
+            pre = pre.next;
+        }
+        pre.next = pre.next.next;
+        return node.next;
+    }
+```
+---
+### 22. 括号生成
+```
+给出 n 代表生成括号的对数，请你写出一个函数，使其能够生成所有可能的并且有效的括号组合。
+例如，给出 n = 3，生成结果为：
+[
+  "((()))",
+  "(()())",
+  "(())()",
+  "()(())",
+  "()()()"
+]
+```
+- O:
+```
+public List<String> generateParenthesis(int n) {
+        List<String> list =new ArrayList<String>();
+        if(n<=0){
+            return list;
+        }
+        helper(list,"",n,n);
+        return list;
+    }
+
+    public void helper(List<String> list,String str,int left,int right){
+        if(left==0&&right==0){
+            list.add(str);
+            return;
+        }
+        if(left>0){
+            helper(list,str+"(",left-1,right);
+        }
+        if(right>0&&left<right){
+            helper(list,str+")",left,right-1);
+        }
+    }
+```
+- T:
+```
+回溯：每次倒退回来都会执行right，再加上left<right，这样右边永远不会超过。每次回退回来都是一个新串。
+```
+---
+### 23. 合并K个排序链表
+```
+合并 k 个排序链表，返回合并后的排序链表。请分析和描述算法的复杂度。
+
+示例:
+
+输入:
+[
+  1->4->5,
+  1->3->4,
+  2->6
+]
+输出: 1->1->2->3->4->4->5->6
+```
+- O:
+```
+public ListNode mergeKLists(ListNode[] lists) {
+        if(lists.length==0){
+            return null;
+        }
+        int len = lists.length; 
+        // 分治
+        while(len>1){
+            for(int i= 0;i<len/2;i++){
+                lists[i] = mergeTwo(lists[i],lists[len-1-i]);
+            }
+            len=(len+1)/2;
+        }
+        return lists[0];
+    }
+
+    public ListNode mergeTwo(ListNode nodeOne,ListNode nodeTwo){
+        ListNode node = new ListNode(-1);
+        ListNode fin = node;
+        while(nodeOne!=null&&nodeTwo!=null){
+            if(nodeOne.val<nodeTwo.val){
+                fin.next = nodeOne;
+                nodeOne = nodeOne.next;
+            }else{
+                fin.next = nodeTwo;
+                nodeTwo = nodeTwo.next;
+            }
+            fin = fin.next;
+        }
+        if(nodeOne!=null){
+            fin.next = nodeOne;
+        }
+        if(nodeTwo!=null){
+            fin.next = nodeTwo;
+        }
+        return node.next;
+    }
+```
+---
+### 31. 下一个排列
+```
+实现获取下一个排列的函数，算法需要将给定数字序列重新排列成字典序中下一个更大的排列。
+
+如果不存在下一个更大的排列，则将数字重新排列成最小的排列（即升序排列）。
+
+必须原地修改，只允许使用额外常数空间。
+
+以下是一些例子，输入位于左侧列，其相应输出位于右侧列。
+1,2,3 → 1,3,2
+3,2,1 → 1,2,3
+1,1,5 → 1,5,1
+```
+- O:
+```
+
+```
